classDiagram

class UUID{
    +User_creation_date
    +User_Update_date
    +Review_Creation_date
    +Review_update_date
    +Places_creation_date
    +Places_update_date
}

class User {
  +string id
  +string first_name
  +string last_name
  -string email
  -string password
  +boolean is_admin
  +DateTime created_at
  +DateTime updated_at
  +write_review()
  +Create_acount()
  +Update_account()
  +delete_account()
}

class Review {
  +string text
  +int rating
  +int Id
  +update_text()
  +update_rating()
}

class Places {
  +string title
  +string description
  +float price
  +float latitude
  +float longitude
  +int Id
  +add_amenity()
  +remove_amenity()
  +Delete_place()
  +List_place()
}

class Places_Amenity{
    Places.int Id
    Amenity. int Id
}

class Amenity {
  +string name
  +string description
  +int Id
  +Create_amenity()
  +Update_amenity()
  +Delete_amenity()
  +List_amenity()

}
User --> UUID
Places --> UUID
Review --> UUID
Places "1" *-- "0..*" User
Review *--"1" User
Review "0..1" *-- "0..*" Places
Places "0..*" --> "0..*" Places_Amenity
Amenity "0..*" --> "0..*"  Places_Amenity
